# solana-skills

./: .gitignore  Cargo.toml  README.md  SKILL.md  claude.md  deny.toml  install.sh  package.json
crates/qedgen/: .gitignore  Cargo.toml
crates/qedgen/.qed/: last-error.json
crates/qedgen/data/interfaces/: metaplex.qedspec  spl_token.qedspec  system.qedspec
crates/qedgen/data/proofs/metaplex/: Metadata.lean  lakefile.lean
crates/qedgen/data/proofs/spl/: Token.lean  lakefile.lean
crates/qedgen/src/: anchor_adapt.rs  anchor_extractor.rs  api.rs  arithmetic_symbol_probe.rs  asm2lean.rs  ast.rs  check.rs  chumsky_adapter.rs  chumsky_parser.rs  cluster.rs  codegen.rs  codegen_mir.rs  codegen_shared.rs  cpi_substitute.rs  crucible_brownfield.rs  crucible_gen.rs  crucible_probe.rs  drift.rs  feedback.rs  fingerprint.rs  handler_intent.rs  import_resolver.rs  integration_test.rs  kani.rs  kani_impl.rs  kani_mir.rs  lean_gen.rs  lean_gen_mir.rs  lean_sidecars.rs  lifecycle_probe.rs  main.rs  mir.rs  miri_verify.rs  native_extractor.rs  paired_validator_probe.rs  pinocchio_extractor.rs  pinocchio_probe.rs  pinocchio_profile.rs  pinocchio_to_spec.rs  probe.rs  (+15 more)
crates/qedgen/test-fixtures/: real-crucible-crash.meta.json
crates/qedgen/tests/: codegen_determinism.rs  codegen_smoke.rs  codegen_snapshot.rs  crucible_brownfield_smoke.rs  kani_snapshot.rs  mir_snapshot.rs  proptest_snapshot.rs  upstream_check_e2e.rs
crates/qedgen/tests/fixtures/: dropset_sbpf.Spec.lean.golden  dropset_sbpf.qedspec  token_axiom_module.lean.golden
crates/qedgen/tests/fixtures/anchor-brownfield-demo/: README.md  after.qedspec  before.qedspec
crates/qedgen/tests/fixtures/anchor-brownfield-demo/src/: lib.rs
crates/qedgen/tests/fixtures/anchor-brownfield-demo/src/instructions/: increment.rs  initialize.rs  mod.rs
crates/qedgen/tests/fixtures/kani-cpi-account-bindings/: qed.toml
crates/qedgen/tests/fixtures/kani-cpi-account-bindings/.qed/: config.json
crates/qedgen/tests/fixtures/native-fixtures/shank-dispatcher/: Cargo.toml
crates/qedgen/tests/fixtures/native-fixtures/shank-dispatcher/src/: lib.rs
crates/qedgen/tests/fixtures/pinocchio-fixtures/: README.md
crates/qedgen/tests/fixtures/pinocchio-fixtures/_harness/: account.rs  adversarial.rs  invariants.rs  mod.rs  state.rs
crates/qedgen/tests/fixtures/pinocchio-fixtures/config-pubkey/: README.md  config.qedspec
crates/qedgen/tests/fixtures/pinocchio-fixtures/kani-generated-ping/: ping.qedspec
crates/qedgen/tests/fixtures/pinocchio-fixtures/kani-profile-diversity/: Cargo.toml  README.md
crates/qedgen/tests/fixtures/pinocchio-fixtures/kani-profile-diversity/schema/: profile.schema
crates/qedgen/tests/fixtures/pinocchio-fixtures/kani-profile-diversity/src/: lib.rs
crates/qedgen/tests/fixtures/pinocchio-fixtures/kani-profile-diversity/verification/: profile.qedspec
crates/qedgen/tests/fixtures/pinocchio-fixtures/kani-smoke/src/: lib.rs
crates/qedgen/tests/fixtures/pinocchio-fixtures/pata-create/: Cargo.toml  NOTICE.md  README.md  expected_findings.json
crates/qedgen/tests/fixtures/pinocchio-fixtures/ptoken-close-account/: Cargo.toml  NOTICE.md  README.md  expected_findings.json
crates/qedgen/tests/fixtures/pinocchio-fixtures/ptoken-transfer/: Cargo.toml  NOTICE.md  README.md  expected_findings.json
crates/qedgen/tests/fixtures/pinocchio-fixtures/vault-greenfield/: vault.qedspec
crates/qedgen/tests/fixtures/quasar-readiness/: README.md
crates/qedgen/tests/fixtures/regressions/anchor-accounts-collision/: README.md  collision.qedspec
crates/qedgen/tests/fixtures/regressions/anchor-forwarder-multistmt/: README.md
crates/qedgen/tests/fixtures/regressions/const-resolution/: repro-check-const-counterexample.qedspec  repro-lean-const-witness.qedspec  repro-proptest-small-bound.qedspec
crates/qedgen/tests/fixtures/regressions/invariants/: repro-establishes-clause.qedspec  repro-handler-invariant-clause.qedspec
crates/qedgen/tests/fixtures/regressions/issue-8/: README.md  pool.qedspec  repro-01-u16-type.qedspec  repro-02-composite-or-parens.qedspec  repro-03-duplicate-theorem.qedspec  repro-04-liveness-params.qedspec  repro-05-uninterpreted-helper.qedspec  repro-06-cover-witness-bool.qedspec  repro-07-const-pubkey-assign.qedspec  repro-07-pubkey-literal-assign.qedspec  repro-08-const-pubkey-compare.qedspec  repro-08-pubkey-literal-compare.qedspec
crates/qedgen/tests/fixtures/regressions/issue-rewards-feedback-1/: forall-distribution.qedspec
crates/qedgen/tests/fixtures/regressions/issue-rewards-feedback-2/: pubkey-field.qedspec
crates/qedgen/tests/fixtures/regressions/pda-collision/: repro-pda-seed-collision.qedspec  repro-pda-seed-possible-collision.qedspec
crates/qedgen/tests/fixtures/regressions/quantifiers/: repro-forall-u64.qedspec  repro-forall-u8.qedspec  repro-forall-value-binder.qedspec
crates/qedgen/tests/fixtures/regressions/v2.21-crucible-crash-first/: README.md
crates/qedgen/tests/fixtures/regressions/v2.22-pinocchio-brownfield-fuzz/: README.md
crates/qedgen/tests/snapshots/: README.md  bundled-stdlib-demo.Spec.lean  bundled-stdlib-demo.codegen.txt  bundled-stdlib-demo.kani.rs  bundled-stdlib-demo.proptest.rs  cross-program-vault.Spec.lean  escrow-split.Spec.lean  escrow-split.codegen.txt  escrow-split.kani.rs  escrow-split.proptest.rs  escrow.Spec.lean  escrow.codegen.txt  escrow.kani.rs  kani-cpi-account-bindings.kani.rs  kani-profile-diversity.kani_impl.rs  lending.Spec.lean  lending.codegen.txt  lending.kani.rs  multisig.Spec.lean  multisig.codegen.txt  multisig.kani.rs  multisig.proptest.rs  percolator.Spec.lean  percolator.codegen.txt  percolator.kani.rs  percolator.proptest.rs
examples/pinocchio-fixtures/kani-smoke/: Cargo.toml
examples/pinocchio-fixtures/kani-smoke/src/: lib.rs
examples/qed-drift-fixture/: Cargo.toml
examples/regressions/v2.21-crucible-crash-first/buggy_anchor/: Cargo.toml
examples/regressions/v2.21-crucible-crash-first/buggy_anchor/src/: lib.rs
examples/rust/brownfield-onboarding/program/: Cargo.toml
examples/rust/brownfield-onboarding/program/src/: lib.rs
(+220 files in other folders)
