[workspace]
members = [
    "crates/qedgen",
    "crates/qedgen-macros",
    "crates/qedgen-sandbox",
    "examples/qed-drift-fixture",
]
exclude = [
    "examples/rust/escrow",
    "examples/rust/lending",
    "examples/rust/multisig",
    "examples/rust/percolator",
    "examples/rust/brownfield-onboarding/program",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "multipart"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
syn = { version = "2", features = ["full", "parsing", "visit"] }
quote = "1"
proc-macro2 = "1"
sha2 = "0.10"
time = { version = "0.3", features = ["formatting"] }
toml = "0.8"
