# M1 smoke fixture for the Pinocchio Kani-impl design.
# Confirms `cargo kani` can build + verify against a `#![no_std]`
# Pinocchio lib dep.
[package]
name = "kani-smoke-pinocchio"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["rlib"]

[dependencies]
pinocchio = "0.8"

# Self-contained workspace — keeps `cargo kani`'s `cargo metadata` step
# from following the parent Cargo.toml at the repo root (which does NOT
# list this fixture in `members` and would otherwise abort with
# "current package believes it's in a workspace when it's not").
[workspace]
