# Fixture Cargo.toml — used by:
#   1. `qedgen probe --program` for Pinocchio dep detection (text scan)
#   2. slice 8 M2: real `cargo build` + `cargo kani` against this crate
#      now that `src/transfer.rs` matches the pinocchio-token 0.3.0 API
[package]
name = "ptoken-transfer-fixture"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
# Trigger for `Runtime::Pinocchio` detection in `qedgen probe`.
# Align to pinocchio-token 0.3.0's transitive pin (pinocchio 0.8.x) —
# mixing 0.6 and 0.8 produces "multiple different versions of crate
# `pinocchio`" errors at the type boundary (TokenAccount::from_account_info
# expects pinocchio 0.8's AccountInfo, not 0.6's).
pinocchio = "0.8"
pinocchio-token = "0.3"

# Self-contained workspace — keeps `cargo build` / `cargo kani` from
# associating this fixture with the parent Cargo.toml at the repo root
# (which intentionally does NOT list it in `members`).
[workspace]
